--- a/JS/registration_form/materialize/materialize.css
+++ b/JS/registration_form/materialize/materialize.css
@@ -2390,7 +2390,7 @@ textarea {
 button,
 input {
   /* 1 */
-  /* overflow: visible; */
+  overflow: visible;
 }
 
 /**
@@ -2400,7 +2400,7 @@ input {
 button,
 select {
   /* 1 */
-  /* text-transform: none; */
+  text-transform: none;
 }
 
 /**
@@ -2412,7 +2412,7 @@ button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-  /* -webkit-appearance: button; */
+  -webkit-appearance: button;
   /* 2 */
 }
 
@@ -2423,8 +2423,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  /* border-style: none;
-  padding: 0; */
+  border-style: none;
+  padding: 0;
 }
 
 /**
@@ -2434,7 +2434,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  /* outline: 1px dotted ButtonText; */
+  outline: 1px dotted ButtonText;
 }
 
 /**
@@ -2597,18 +2597,18 @@ textarea {
 }
 
 ul:not(.browser-default) {
-  /* padding-left: 0;
-  list-style-type: none; */
+  padding-left: 0;
+  list-style-type: none;
 }
 
 ul:not(.browser-default) > li {
-  /* list-style-type: none; */
+  list-style-type: none;
 }
 
 a {
-  /* color: #039be5;
+  color: #039be5;
   text-decoration: none;
-  -webkit-tap-highlight-color: transparent; */
+  -webkit-tap-highlight-color: transparent;
 }
 
 .valign-wrapper {
@@ -2853,7 +2853,7 @@ video.responsive-video {
   Transition Classes
 **********************/
 ul.staggered-list li {
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .fade-in {
@@ -3394,12 +3394,12 @@ span.badge[data-badge-caption]::after {
 }
 
 nav ul a span.badge {
-  /* display: inline-block;
+  display: inline-block;
   float: none;
   margin-left: 4px;
   line-height: 22px;
   height: 22px;
-  -webkit-font-smoothing: auto; */
+  -webkit-font-smoothing: auto;
 }
 
 .collection-item span.badge {
@@ -4270,76 +4270,76 @@ table span.badge {
 }
 
 nav {
-  /* color: #fff;
+  color: #fff;
   background-color: #ee6e73;
   width: 100%;
   height: 56px;
-  line-height: 56px; */
+  line-height: 56px;
 }
 
 nav.nav-extended {
-  /* height: auto; */
+  height: auto;
 }
 
 nav.nav-extended .nav-wrapper {
-  /* min-height: 56px;
-  height: auto; */
+  min-height: 56px;
+  height: auto;
 }
 
 nav.nav-extended .nav-content {
-  /* position: relative;
-  line-height: normal; */
+  position: relative;
+  line-height: normal;
 }
 
 nav a {
-  /* color: #fff; */
+  color: #fff;
 }
 
 nav i,
 nav [class^="mdi-"], nav [class*="mdi-"],
 nav i.material-icons {
-  /* display: block;
+  display: block;
   font-size: 24px;
   height: 56px;
-  line-height: 56px; */
+  line-height: 56px;
 }
 
 nav .nav-wrapper {
-  /* position: relative;
-  height: 100%; */
+  position: relative;
+  height: 100%;
 }
 
 @media only screen and (min-width: 993px) {
   nav a.sidenav-trigger {
-    /* display: none; */
+    display: none;
   }
 }
 
 nav .sidenav-trigger {
-  /* float: left;
+  float: left;
   position: relative;
   z-index: 1;
   height: 56px;
-  margin: 0 18px; */
+  margin: 0 18px;
 }
 
 nav .sidenav-trigger i {
-  /* height: 56px;
-  line-height: 56px; */
+  height: 56px;
+  line-height: 56px;
 }
 
 nav .brand-logo {
-  /* position: absolute;
+  position: absolute;
   color: #fff;
   display: inline-block;
   font-size: 2.1rem;
-  padding: 0; */
+  padding: 0;
 }
 
 nav .brand-logo.center {
-  /* left: 50%;
+  left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%); */
+          transform: translateX(-50%);
 }
 
 @media only screen and (max-width: 992px) {
@@ -4375,7 +4375,9 @@ nav .brand-logo i.material-icons {
 }
 
 nav .nav-title {
-/
+  display: inline-block;
+  font-size: 32px;
+  padding: 28px 0;
 }
 
 nav ul {
@@ -8484,19 +8486,10 @@ input[type=range]::-ms-thumb {
   visibility: visible;
   -webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
           animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
-  -webkit-transition: opacity .3s,
- visibility 0s 1s,
- -webkit-transform .3s;
-  transition: opacity .3s,
- visibility 0s 1s,
- -webkit-transform .3s;
-  transition: opacity .3s,
- transform .3s,
- visibility 0s 1s;
-  transition: opacity .3s,
- transform .3s,
- visibility 0s 1s,
- -webkit-transform .3s;
+  -webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
+  transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
+  transition: opacity .3s, transform .3s, visibility 0s 1s;
+  transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
 }
 
 .tap-target {
@@ -8549,19 +8542,10 @@ input[type=range]::-ms-thumb {
 
 .tap-target-wave::after {
   visibility: hidden;
-  -webkit-transition: opacity .3s,
- visibility 0s,
- -webkit-transform .3s;
-  transition: opacity .3s,
- visibility 0s,
- -webkit-transform .3s;
-  transition: opacity .3s,
- transform .3s,
- visibility 0s;
-  transition: opacity .3s,
- transform .3s,
- visibility 0s,
- -webkit-transform .3s;
+  -webkit-transition: opacity .3s, visibility 0s, -webkit-transform .3s;
+  transition: opacity .3s, visibility 0s, -webkit-transform .3s;
+  transition: opacity .3s, transform .3s, visibility 0s;
+  transition: opacity .3s, transform .3s, visibility 0s, -webkit-transform .3s;
   z-index: -1;
 }
 
