--- a/JS/registration_form/style.css
+++ b/JS/registration_form/style.css
@@ -17,7 +17,7 @@
 }
 
 .inp {
-    width: 300px;
+    width: 230px;
     border: 1px solid teal;
     border-radius: 6px;
     padding: 10px;
@@ -96,4 +96,12 @@
     border: 2px solid teal;
     border-radius: 10px;
     padding: 10px;
+}
+
+.filter-wrap {
+    border: 2px solid teal;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 30px;
+    min-width: 250px;
 }
